# Two_ray_propagation

./: LICENSE  README.md  Two_ray_prop.py  Two_ray_propagation.ipynb  pyproject.toml
