[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "two-ray-propagation"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Marcel van den Broek" }]
keywords = ["propagation", "two-ray", "radio", "fresnel"]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

